# neuralnet

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  drawing-pad.py  loadimages.hpp  main.cpp
include/neuralnet/: network.hpp
src/: CMakeLists.txt  activations.hpp  loadimages.hpp  main.cpp  network.cpp  neuralnetwork.hpp  progress-bar.hpp  tests.hpp  utilities.hpp
